--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -19,6 +19,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Login to Exoscale Registry
+        run: echo "${{ secrets.EXO_REGISTRY_PASSWORD }}" | docker login ${{ env.REG_NAME }} -u ${{ secrets.EXO_REGISTRY_USERNAME }} --password-stdin
+
       - name: Build Docker Image
         run: docker build -t ${{ env.IMAGE_NAME }}:latest ./backend
 
