--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -23,7 +23,7 @@ jobs:
         run: echo "${{ secrets.EXO_REGISTRY_PASSWORD }}" | docker login ${{ env.REG_NAME }} -u ${{ secrets.EXO_REGISTRY_USERNAME }} --password-stdin
 
       - name: Build Docker Image
-        run: docker build -t ${{ env.IMAGE_NAME }}:latest ./backend
+        run: docker build -t ${{ env.IMAGE_NAME }}:latest
 
       - name: Tag Docker Image
         run: docker tag ${{ env.IMAGE_NAME }}:latest ${{ env.REG_NAME }}/c213-emf/${{ env.IMAGE_NAME }}:latest
