--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -3,7 +3,7 @@ name: Build and save my Docker image to a regitry
 on:
   push:
     paths:
-      - './todo-app/src/backend/**'
+      - './todo-app/src/backend/'
     branches:
       - main  # Déclenchement lorsque le code est poussé sur main
 
