--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -3,7 +3,7 @@ name: Build and save my Docker image to a regitry
 on:
   push:
     paths:
-      - './todo-app/src/backend'
+      - 'todo-app/src/backend/'
     branches:
       - main  # Déclenchement lorsque le code est poussé sur main
 
@@ -23,7 +23,7 @@ jobs:
         run: echo "${{ secrets.EXO_REGISTRY_PASSWORD }}" | docker login ${{ env.REG_NAME }} -u ${{ secrets.EXO_REGISTRY_USERNAME }} --password-stdin
 
       - name: Build Docker Image
-        run: docker build -t ${{ env.IMAGE_NAME }}:latest
+        run: docker build -t ${{ env.IMAGE_NAME }}:latest todo-app/src/backend
 
       - name: Tag Docker Image
         run: docker tag ${{ env.IMAGE_NAME }}:latest ${{ env.REG_NAME }}/c213-emf/${{ env.IMAGE_NAME }}:latest
