--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -19,11 +19,15 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
       - name: Login to Exoscale Registry
         run: echo "${{ secrets.EXO_REGISTRY_PASSWORD }}" | docker login ${{ env.REG_NAME }} -u ${{ secrets.EXO_REGISTRY_USERNAME }} --password-stdin
 
       - name: Build Docker Image
-        run: docker build -t ${{ env.IMAGE_NAME }}:latest todo-app/src/backend
+        working-directory: ./todo-app/src/backend
+        run: docker build -t ${{ env.IMAGE_NAME }}:latest
 
       - name: Tag Docker Image
         run: docker tag ${{ env.IMAGE_NAME }}:latest ${{ env.REG_NAME }}/c213-emf/${{ env.IMAGE_NAME }}:latest
