--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -23,14 +23,14 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Login to Exoscale Registry
-        run: echo "${{ secrets.EXO_REGISTRY_PASSWORD }}" | docker login ${{ env.REG_NAME }} -u ${{ secrets.EXO_REGISTRY_USERNAME }} --password-stdin
+        run: echo "${{ secrets.EXO_REGISTRY_PASSWORD }}" | docker login $REG_NAME -u ${{ secrets.EXO_REGISTRY_USERNAME }} --password-stdin
 
       - name: Build Docker Image
         working-directory: ./todo-app/src/backend
-        run: docker build -t ${{ env.IMAGE_NAME }}:latest
+        run: docker build -t $REG_NAME/c213-emf/$IMAGE_NAME:latest .
 
       - name: Tag Docker Image
-        run: docker tag ${{ env.IMAGE_NAME }}:latest ${{ env.REG_NAME }}/c213-emf/${{ env.IMAGE_NAME }}:latest
+        run: docker tag $IMAGE_NAME:latest $REG_NAME/c213-emf/$IMAGE_NAME:latest
 
       - name: Push Docker Image
-        run: docker push ${{ env.REG_NAME }}/c213-emf/${{ env.IMAGE_NAME }}:latest
+        run: docker push $REG_NAME/c213-emf/$IMAGE_NAME:latest
