--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -5,7 +5,7 @@ on:
     paths:
       - 'todo-app/src/backend/**'
     branches:
-      - main  # Déclenchement lorsque le code est poussé sur main
+      - master  # Déclenchement lorsque le code est poussé sur main
 
 env:
   REG_NAME: "exo.container-registry.com" # Nom du registy
